# clamda

./: .gitignore  meson.build
include/clamda/: clamda.h
include/clamda/private/: parser.h  string.h
src/parser/: readline.c  utils.c
src/string/: trim.c
tests/parser/: utils.c
tests/string/: trim.c
